--- a/static/styles.css
+++ b/static/styles.css
@@ -60,14 +60,23 @@ button:hover {
     background-color: #2b2b5c;
     border-radius: 10px;
     display: flex;
+    flex-direction: column;
     width: 100%; /* Nimmt die gesamte Breite des Containers ein */
     padding: 20px;
     transition: transform 0.3s ease;
     margin: 10px 0; /* Abstand zwischen den Alben */
+    cursor: pointer;
 }
 
 .album:hover {
-    transform: scale(1.05);
+    transform: scale(1.01);
+}
+
+.album-preview {
+    display: flex;
+    align-items: center;
+    position: relative; /* Add relative positioning */
+    padding-right: 200px; /* Ensures space for the rating blocks */
 }
 
 .album-cover {
@@ -83,14 +92,30 @@ button:hover {
 .album-info {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     flex: 1;
 }
 
-.album-info > div {
+.album-details {
+    margin-right: auto; /* Pushes the album details to the left */
+}
+
+.rating-container {
+    display: flex; /* Makes sure the rating blocks are in a row */
+    position: absolute;
+    bottom: 10px; /* Position the rating blocks towards the bottom */
+    right: 10px; /* Position the rating blocks towards the right */
+}
+
+.rating-block {
+    margin-left: 30px; /* Adds space between rating blocks */
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: flex-end;
+}
+
+.rating-block + .rating-block {
+    bottom: 50px; /* Adjust this value to position the second rating block above the first */
 }
 
 .title, .rating, .reviewer {
@@ -100,15 +125,54 @@ button:hover {
 
 .artist {
     font-size: 24px;
-    margin: 0 0 10px;
+    margin: 0;
 }
+
 .album-name {
     font-size: 20px;
-    margin: 0 0 10px;
+    margin: 0;
 }
 
 .rating {
     font-size: 20px; /* Kleinere Schriftgröße für Bewertungen */
+}
+
+.album-comment-section {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.comment-box {
+    background-color: #3b3b6c;
+    border-radius: 10px;
+    padding: 15px;
+    margin: 10px 5px;
+    flex: 0 0 48%; /* Ensures each comment box takes up about half the available width */
+}
+
+@media (max-width: 768px) {
+    .album-comment-section {
+        flex-direction: column;
+    }
+
+    .comment-box {
+        flex: 1 1 100%; /* Full width for smaller screens */
+        max-width: 100%;
+        margin: 10px 0;
+    }
+}
+
+
+.comment-title {
+    font-size: 18px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.comment-content {
+    font-size: 16px;
+    margin: 0;
 }
 
 .modal {
@@ -120,7 +184,7 @@ button:hover {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
