--- a/templates/index.html
+++ b/templates/index.html
@@ -5,23 +5,40 @@
 {% block content %}
     <div class="container">
         {% for album in albums %}
-            <div class="album">
-                <div class="album-cover"
-                     style="background-image: url('{{ url_for('static', filename='album_covers/' ~ album.id ~ '.jpg') }}');"></div>
-                <div class="album-info">
-                    <div class="album-details">
-                        <p class="artist">{{ album.artist }}</p>
-                        <p class="album-name">{{ album.name }}</p>
-                    </div>
+            <div class="album" onclick="toggleCommentSection(this)">
+                <div class="album-preview">
+                    <div class="album-cover"
+                         style="background-image: url('{{ url_for('static', filename='album_covers/' ~ album.id ~ '.jpg') }}');"></div>
+                    <div class="album-info">
+                        <div class="album-details">
+                            <p class="artist">{{ album.artist }}</p>
+                            <p class="album-name">{{ album.name }}</p>
+                        </div>
 
-                    <div class="rating-block">
-                        <p class="reviewer">Elias</p>
-                        <p class="rating">9/10</p>
+                        <div class="rating-container">
+                            <div class="rating-block">
+                                <p class="reviewer">Elias</p>
+                                <p class="rating">9/10</p>
+                            </div>
+                            <div class="rating-block">
+                                <p class="reviewer">Moritz</p>
+                                <p class="rating">8/10</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="rating-block">
-                        <p class="reviewer">Moritz</p>
-                        <p class="rating">8/10</p>
-
+                </div>
+                <div class="album-comment-section" style="display: none;">
+                    <div class="comment-box">
+                        <div class="comment-elias">
+                            <p class="comment-title">Kommentar von Elias</p>
+                            <p class="comment-content">Super Album!</p>
+                        </div>
+                    </div>
+                    <div class="comment-box">
+                        <div class="comment-moritz">
+                            <p class="comment-title">Kommentar von Moritz</p>
+                            <p class="comment-content">Super Album!</p>
+                        </div>
                     </div>
                 </div>
             </div>
